# frontend/openapi.json
@@ -1784,7 +1784,7 @@
           "plot"
         ],
         "summary": "Show Mcs Data Chart",
-        "description": "MCS\u30c7\u30fc\u30bf\u30c1\u30e3\u30fc\u30c8\u3092\u53d6\u5f97\n\n\u6307\u5b9a\u3055\u308c\u305fframe_id\u306eMCS\u30c7\u30fc\u30bf\u3092\u30ab\u30e9\u30fc\u6563\u5e03\u56f3\u3068\u3057\u3066\u8868\u793a\u3057\u307e\u3059\u3002\n\u8272\u306fpeakvalue\u306b\u57fa\u3065\u304d\u307e\u3059\u3002\n\nArgs:\n    db: DB\u30bb\u30c3\u30b7\u30e7\u30f3\n    frame_id: MCS\u30d5\u30ec\u30fc\u30e0ID\n    width: \u753b\u50cf\u5e45\uff08px\uff09\n    height: \u753b\u50cf\u9ad8\u3055\uff08px\uff09\n\nReturns:\n    PNG\u753b\u50cf\u306e\u30ec\u30b9\u30dd\u30f3\u30b9\n\nRaises:\n    HTTPException: \u30c7\u30fc\u30bf\u304c\u898b\u3064\u304b\u3089\u306a\u3044\u5834\u5408\u306f204\u3092\u8fd4\u3059",
+        "description": "MCS\u30c7\u30fc\u30bf\u30c1\u30e3\u30fc\u30c8\u3092\u53d6\u5f97\n\n\u6307\u5b9a\u3055\u308c\u305fframe_id\u306eMCS\u30c7\u30fc\u30bf\u3092\u30ab\u30e9\u30fc\u6563\u5e03\u56f3\u3068\u3057\u3066\u8868\u793a\u3057\u307e\u3059\u3002\n\u8272\u306fpeakvalue\u306b\u57fa\u3065\u304d\u307e\u3059\u3002\n\nArgs:\n    db: DB\u30bb\u30c3\u30b7\u30e7\u30f3\n    frame_id: MCS\u30d5\u30ec\u30fc\u30e0ID\n    width: \u753b\u50cf\u5e45\uff08px\uff09\n    height: \u753b\u50cf\u9ad8\u3055\uff08px\uff09\n    theme: \u30ab\u30e9\u30fc\u30c6\u30fc\u30de\uff08light/dark\uff09\n\nReturns:\n    PNG\u753b\u50cf\u306e\u30ec\u30b9\u30dd\u30f3\u30b9\n\nRaises:\n    HTTPException: \u30c7\u30fc\u30bf\u304c\u898b\u3064\u304b\u3089\u306a\u3044\u5834\u5408\u306f204\u3092\u8fd4\u3059",
         "operationId": "show_mcs_data_chart_api_mcs_data__frame_id__png_get",
         "parameters": [
           {
@@ -1821,6 +1821,22 @@
               "title": "Height"
             },
             "description": "\u753b\u50cf\u9ad8\u3055\uff08px\uff09"
+          },
+          {
+            "name": "theme",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "enum": [
+                "light",
+                "dark"
+              ],
+              "type": "string",
+              "description": "\u30ab\u30e9\u30fc\u30c6\u30fc\u30de\uff08light/dark\uff09",
+              "default": "light",
+              "title": "Theme"
+            },
+            "description": "\u30ab\u30e9\u30fc\u30c6\u30fc\u30de\uff08light/dark\uff09"
           }
         ],
         "responses": {
